// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Posthog's event destination action: all fields 1`] = `
Object {
  "api_key": ")z(DntC*1pA^Oh]x",
  "distinct_id": ")z(DntC*1pA^Oh]x",
  "event": ")z(DntC*1pA^Oh]x",
  "properties": Object {
    "testType": ")z(DntC*1pA^Oh]x",
  },
  "timestamp": "2021-02-01T00:00:00.000Z",
}
`;

exports[`Testing snapshot for Posthog's event destination action: required fields 1`] = `
Object {
  "api_key": ")z(DntC*1pA^Oh]x",
  "distinct_id": ")z(DntC*1pA^Oh]x",
  "event": ")z(DntC*1pA^Oh]x",
}
`;
